# snake

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  game.c
.cache/clangd/index/: doubly_linked_list.c.F2843679158CABF8.idx  doubly_linked_list.h.D3BC7AEB16F268EE.idx  game.c.38385D54EE28FD85.idx  term_tweaks.h.6925A98E6EAA4FF6.idx  termios_init.c.934552CB38063A65.idx  termios_init.h.5D5869C40E0895FB.idx
include/: doubly_linked_list.h  term_tweaks.h  termios_init.h
src/: doubly_linked_list.c  game.c  termios_init.c
